# fastx

./: Cargo.toml  README.md
benches/: readers.rs
src/: internals.rs  lib.rs
tests/test_data/: test.fq
